*** Add FOCUS event and 'Graphic.focus' method; add; 'trigger' argument to 'Graphic.blur'
*** DRAG and RELEASE events apply to Sketch
*** Add 'Sketch.resizeTrigger' to trigger 'onresize' handler for programmatic resizing
* Add 'hoverable' property to Graphic class and add 'includeAll' argument to 'Canvas.objectAt'
* Allow 'padding' argument of 'util.style' to be a 2-tuple with different x and y values
* Fix delay on moving 'TextInput' cursor after CLICK
** Allow clipboard paste into text input
* Add 'TextInput.scroll' method as default 'ondraw' event handler
*** Add 'TextInputCanvas' class and call 'tk.getClipboard'
** Add support for selection, copy, cut, and paste operations in 'TextInput'
*** Add 'Slider.methodNames'
** Drag slider knob from any point rather than only the center
** Default knob size based on number of steps
*** Add 'Canvas.call', 'Canvas.scroll' and 'Canvas.scrollTo' methods
*** Standardize attributes (target, focus, hover, handler) for sc8pr events
*** Add 'scrollable' and 'spos' properties to 'Graphic' class
*** Add 'dpos' method to 'Canvas' and 'sc8pr.gui._SCanvas' classes
*** Add 'sc8pr.gui.scroll' and 'sc8pr.gui.tk' modules
*** Add 'Robot' methods 'say', 'listen', 'ask'
*** Add 'LATEX_URL', 'LATEX_FMT', 'latex_url' to 'sc8pr.misc.webcache'
*** 'WebCache' does not overwrite existing cache file if URL is different
* Add 'fakeCursor' example (depends on 'hoverable' property)
* Normalize examples to use 'play' as name of main function
*** Experimental module 'misc.barchart'
** Fix blit location bug in 'Canvas.snapshot'
* Sync video capture when sketch does not run at nominal frame rate
* Add 'util.modKeys'
* Add 'invert' parameter to 'misc.plot.coordTr'
* Allow assignment to canvas by layer: cv[layer] = gr
*** Deprecate 'misc.effect.Remove' in favour of 'QueueRemove'
** Fix minor bug with 'Sketch.caption' getter
*** Add 'Ellipse' and 'Arc' classes to 'sc8pr.shape'

!!! Add 'util.borderRadius'